--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,51 +1,9 @@
-<header>
-  <div id="logo">
-    <img src="logo.png" alt="Website logo, a server" />
-  </div>
-
-  <nav>
-    <ul>
-      <li>
-        <a href="/">Home</a>
-      </li>
-      <li>
-        <a href="/">Management</a>
-      </li>
-      <li>
-        <button>
-          <span>
-            Logout
-          </span>
-          <span class="icon">
-            →
-          </span>
-        </button>
-      </li>
-    </ul>
-  </nav>
-</header>
+<app-header />
 
 <main>
   <div id="dashboard">
     <div class="dashboard-item">
-      <article>
-        <header>
-          <img src="status.png" alt="A signal symbol" />
-          <h2>Server Status</h2>
-        </header>
-        <div>
-          @if (currentStatus === 'online') {
-            <p>Servers are online</p>
-            <p>All systems are operational.</p>
-          } @else if (currentStatus === 'offline') {
-            <p>Servers are offline</p>
-            <p>Functionality should be restored soon.</p>
-          } @else {
-            <p>Server status is unknown</p>
-            <p>Fetching server status failed.</p>
-          }
-        </div>
-      </article>
+      <app-server-status />
     </div>
 
     <div class="dashboard-item">
@@ -59,7 +17,9 @@
 
           <div id="chart">
             @for (dataPoint of dummyTrafficData; track dataPoint.id) {
-              <div [style.height]="(dataPoint.value / maxTraffic) * 100 + '%'"></div>
+            <div
+              [style.height]="(dataPoint.value / maxTraffic) * 100 + '%'"
+            ></div>
             }
           </div>
         </div>
