--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,22 +3,21 @@
 <main>
   <div id="dashboard">
     <app-dashboard-item
-    [image]="{src: '', alt = ''}"
-      [image]="{ src: 'status.png', alt= 'A signal symbol' }"
+      [image]="{ src: 'status.png', alt: 'A signal symbol' }"
       title="Server Status"
     >
       <app-server-status />
     </app-dashboard-item>
 
     <app-dashboard-item
-      [image]="{ src: 'globe.png', alt= 'A globe' }"
+      [image]="{ src: 'globe.png', alt: 'A globe' }"
       title="Traffic"
     >
       <app-traffic />
     </app-dashboard-item>
 
     <app-dashboard-item
-      [image]="{ src: 'list.png', alt= 'A list of items' }"
+      [image]="{ src: 'list.png', alt: 'A list of items' }"
       title="Support Tickets"
     >
       <app-tickets />
