--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,21 +6,22 @@
       [image]="{ src: 'status.png', alt: 'A signal symbol' }"
       title="Server Status"
     >
-      <app-server-status />
+      <!-- <app-server-status /> -->
     </app-dashboard-item>
 
     <app-dashboard-item
       [image]="{ src: 'globe.png', alt: 'A globe' }"
       title="Traffic"
     >
-      <app-traffic />
+      <!-- <app-traffic /> -->
     </app-dashboard-item>
 
     <app-dashboard-item
       [image]="{ src: 'list.png', alt: 'A list of items' }"
       title="Support Tickets"
     >
-      <app-tickets />
+      <!-- <app-tickets /> -->
+      <app-new-ticket />
     </app-dashboard-item>
   </div>
 </main>
