--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,6 +1,6 @@
 <span>
   <ng-content />
 </span>
-<span>
-  <ng-content select=".icon" />
+<span class="icon">
+  <ng-content select="icon" />
 </span>
