--- a/src/app/shared/control/control.component.html
+++ b/src/app/shared/control/control.component.html
@@ -1,2 +1,2 @@
-<label>{{ label() }}</label>
-<ng-content select="input, textarea" />
+<label class="control">{{ label() }}</label>
+<ng-content class="control" select="input, textarea" />
