--- a/src/app/dashboard/tickets/ticket/ticket.component.html
+++ b/src/app/dashboard/tickets/ticket/ticket.component.html
@@ -7,7 +7,7 @@
       }"
     ></div>
     <button>
-      <span class="text">TITLE</span>
+      <span class="text">{{ data() }}</span>
       <span>
         @if (true) {
         <svg
