--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,6 +1,6 @@
-<form (ngSubmit)="onSubmit(titleInput.value, textInput.value, form)" #form>
+<form (ngSubmit)="onSubmit(titleInput.value, textInput.value)" #form>
   <app-control label="Title">
-    <input name="title" id="title" #titleInput #input/>
+    <input name="title" id="title" #titleInput #input />
   </app-control>
   <app-control label="Request">
     <textarea name="request" id="request" rows="3" #textInput #input></textarea>
