--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,4 +1,4 @@
-<!-- <form (ngSubmit)="onSubmit(titleInput.value, textInput.value)" #form>
+<form (ngSubmit)="onSubmit(titleInput.value, textInput.value)" #form>
   <app-control label="Title">
     <input name="title" id="title" #titleInput #input />
   </app-control>
@@ -9,21 +9,6 @@
     <button appButton>
       Submit
       <span ngProjectAs="icon">⌲ </span>
-    </button>
-  </p>
-</form> -->
-
-<form>
-  <app-control label="Title">
-    <input name="title" id="title" />
-  </app-control>
-  <app-control label="Request">
-    <textarea name="request" id="request" rows="3"></textarea>
-  </app-control>
-  <p>
-    <button appButton>
-      Submit
-      <span ngProjectAs="icon">⌲</span>
     </button>
   </p>
 </form>
