--- a/src/app/dashboard/tickets/tickets.component.html
+++ b/src/app/dashboard/tickets/tickets.component.html
@@ -10,6 +10,6 @@
   </ul>
 </div>
 
-<!-- <div id="new-ticket">
+<div id="new-ticket">
   <app-new-ticket (add)="onAdd($event)" />
-</div> -->
+</div>
